--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit==1.12.0
-Pillow==8.4.0
-numpy==1.21.6
-opencv-python-headless==4.5.5.64
-
+streamlit
+pillow
+numpy
+opencv-python-headless
